Test file added