@@ -1,11 +1,11 @@
-package LazyFunctions;
-// Skip last 2 elements using stream
+// Skip last 2 elements using stream and print the remaining elements.
+
 import java.util.*;
 public class LF2 {
     public static void main(String args[]){
-        List<Integer> list = List.of(10,20,30,40,50,60,70,80);
-        list.stream()
-            .skip(list.size() - 2)
-            .forEach(System.out::println);
+        List<Integer> list = Arrays.asList(1,2,3,4,5,6,7,8);
+        // list.stream().skip(list.size()-2).forEach(n -> System.out.println(n));
+
+        list.stream().limit(list.size() - 2).forEach(x -> System.out.print(x + " "));
     }
 }
